custom backend authentication done

--- a/ForgetPasswordForm.html
+++ b/ForgetPasswordForm.html
@@ -88,7 +88,7 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-12 text-center">
-                            <h1 class="text-white animated zoomIn">Login</h1>
+                            <h1 class="text-white animated zoomIn">Reset Password</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
@@ -130,7 +130,7 @@
 
 
 
-        <!-- Login form start -->
+        <!-- forget form start -->
         <section class="bg-image">
             <div class="mask d-flex align-items-center gradient-custom-3">
                 <div class="container ">
@@ -138,71 +138,33 @@
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                             <div class="section-title position-relative text-center mb-3 pb-2 wow fadeInUp"
                                 data-wow-delay="0.1s">
-                                <h6 class="position-relative d-inline text-primary ps-4">Login</h6>
-                                <h2 class="mt-2">Login Your account</h2>
+                                <h6 class="position-relative d-inline text-primary ps-4">Forgot Password?</h6>
+                                <h2 class="mt-2">Reset Your Password</h2>
                             </div>
                             <div class="card" style="border-radius: 15px;">
                                 <div class="card-body p-5">
 
 
-                                    <form id="loginForm">
+                                    <form id="ResetForm">
 
                                         <div class="form-floating mb-2">
                                             <input name="email" type="email" class="form-control" id="email"
                                                 placeholder="Your Name" required>
                                             <label for="email">Your Email</label>
                                         </div>
-                                        <div class="form-floating mb-2">
-                                            <input name="password" type="password" class="form-control" id="password"
-                                                placeholder="Your Password" required>
-                                            <label for="password">Your Password</label>
-                                        </div>
-                                        <!-- <div id="resetPass" class="cursor-pointer">
-                                            <a class="text-decoration-underline ">
-                                                Forget Password
-                                            </a>
-                                        </div> -->
-                                        <button id="resetPass" class="btn btn-link btn-outline-none">
-                                            <a href="/ForgetPasswordForm.html"
-                                                class="text-decoration-underline cursor-pointer">
-                                                Forget Password
-                                            </a>
-                                        </button>
+
+
+
 
                                         <div class="d-flex justify-content-center">
                                             <button type="submit" class="btn btn-primary btn-block  btn-lg mt-2 w-100"
                                                 id="login-btn">
-                                                Login
+                                                Get Reset Email
                                             </button>
                                         </div>
                                     </form>
-                                    <p class="text-center  mt-2 mb-0">
-                                        Don't Have an acount?
-                                        <a href="/signUp.html" class="fw-bold  text-primary">
-                                            <u>SingUp here</u>
-                                        </a>
-                                    </p>
 
 
-                                    <!-- <div class="d-flex align-items-center my-2 ">
-                                        <hr
-                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                        <h5>OR</h5>
-                                        <hr
-                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                    </div>
-
-                                    <button id="googleButton"
-                                        class="btn btn-primary w-100 text-center d-flex align-items-center justify-content-center  ">
-                                        <i style="background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
-                                                                            -webkit-background-clip: text;
-                                                                            background-clip: text;
-                                                                            color: transparent;
-                                                                            -webkit-text-fill-color: transparent;"
-                                            class="fab fa-google fa-2x">
-                                        </i>
-                                        <span class="mx-3">Login With Google</span>
-                                    </button> -->
 
 
                                 </div>
@@ -303,8 +265,8 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-    <!-- login js -->
-    <script type="module" src="js/loginJs/login.js"></script>
+    <!-- forget pass js -->
+    <script type="module" src="js/ForgetPass.js/ForgetPass.js"></script>
 </body>
 
 </html>
