--- a/Registration.html
+++ b/Registration.html
@@ -179,19 +179,19 @@
                                     <fieldset>
                                         <label>
                                             Mentor Name *
-                                            <input type="text" name="FirstName" required>
+                                            <input type="text" name="username" required id="username" readonly>
                                         </label>
                                         <div class="two-cols">
                                             <label>
-                                                Email address *
-                                                <input type="email" name="Email" required>
+                                                Email address * [can't change]
+                                                <input type="email" name="email" id="mentorEmail" required readonly>
                                             </label>
                                             <label>
                                                 Phone *
                                                 <input type="tel" name="Phone" required>
                                             </label>
                                         </div>
-                                        <div class="two-cols">
+                                        <!--  <div class="two-cols">
                                             <label>
                                                 State
                                                 <input type="text" name="Citizenship">
@@ -279,11 +279,11 @@
                                         <label>
                                             Brief / Tagline
                                             <input type="text" name="briefTagline">
-                                        </label>
+                                        </label> -->
 
                                     </fieldset>
                                     <div class="btns">
-                                        <input type="text" name="_gotcha" value="" style="display:none;">
+                                        <!-- <input type="text" name="_gotcha" value="" style="display:none;"> -->
                                         <input type="submit" value="Submit application">
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
 
 
 
-
+                            <!--__________________________  sturtup form start______________________________________ -->
 
                             <form id="ft-form" class="startupForm">
                                 <div class="green box">
@@ -307,19 +307,24 @@
                                     <fieldset>
                                         <label>
                                             Startup Name *
-                                            <input type="text" name="startup name" required>
+                                            <input type="text" name="startupName" required>
+                                        </label>
+                                        <label>
+                                            your email address * [can't change]
+                                            <input type="email" name="email" id="startupUserEmail" required>
                                         </label>
                                         <div class="two-cols">
+
                                             <label>
-                                                Email address *
-                                                <input type="email" name="Email" required>
+                                                Startup Email address *
+                                                <input type="email" name="startUpEmail" required>
                                             </label>
                                             <label>
                                                 Phone *
-                                                <input type="tel" name="Phone" required>
+                                                <input type="tel" name="sturtupPhone" required>
                                             </label>
                                         </div>
-                                        <div class="two-cols">
+                                        <!-- <div class="two-cols">
                                             <label>
                                                 Registered State
                                                 <input type="text" name="Citizenship">
@@ -404,7 +409,7 @@
                                             <option value="Incubators">Incubators</option>
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
-                                        </select>
+                                        </select> -->
 
                                     </fieldset>
 
