--- a/Registration.html
+++ b/Registration.html
@@ -159,7 +159,7 @@
                             <h2 class="mt-2">Get Disruptive Acceleration With Q Startups</h2>
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
-                            <form id="ft-form" class="form">
+                            <form id="ft-form" class="form" accept-charset="UTF-8" enctype="multipart/form-data">
 
 
                                 <fieldset>
@@ -191,7 +191,7 @@
                                                 <input type="tel" name="Phone" required>
                                             </label>
                                         </div>
-                                        <!--  <div class="two-cols">
+                                        <div class="two-cols">
                                             <label>
                                                 State
                                                 <input type="text" name="Citizenship">
@@ -279,7 +279,7 @@
                                         <label>
                                             Brief / Tagline
                                             <input type="text" name="briefTagline">
-                                        </label> -->
+                                        </label>
 
                                     </fieldset>
                                     <div class="btns">
@@ -309,22 +309,19 @@
                                             Startup Name *
                                             <input type="text" name="startupName" required>
                                         </label>
-                                        <label>
-                                            your email address * [can't change]
-                                            <input type="email" name="email" id="startupUserEmail" required>
-                                        </label>
-                                        <div class="two-cols">
 
+                                        <div class="two-cols">
                                             <label>
-                                                Startup Email address *
-                                                <input type="email" name="startUpEmail" required>
+                                                StartUp Email address * [can't change]
+                                                <input type="email" name="email" id="startupUserEmail" required>
                                             </label>
+
                                             <label>
                                                 Phone *
                                                 <input type="tel" name="sturtupPhone" required>
                                             </label>
                                         </div>
-                                        <!-- <div class="two-cols">
+                                        <div class="two-cols">
                                             <label>
                                                 Registered State
                                                 <input type="text" name="Citizenship">
@@ -377,7 +374,7 @@
                                             </select>
                                         </div>
                                         <label for="cars">Nature Of the Entity</label>
-                                        <select name="Nature of Entity" id="cars">
+                                        <select name="NatureOfEntity" id="cars">
                                             <option value="no">Private Limited Company</option>
                                             <option value="yes">Limited Liability Partnership</option>
                                             <option value="yes">Registered Partnership</option>
@@ -409,7 +406,7 @@
                                             <option value="Incubators">Incubators</option>
                                             <option value="Accelerators">Accelerators</option>
                                             <option value="Investors">Investors</option>
-                                        </select> -->
+                                        </select>
 
                                     </fieldset>
 
