--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -109,11 +109,11 @@
                 <table id="fresh-table" class="table">
                   <thead>
                     <th data-field="id" data-sortable="true">ID</th>
-                    <th data-field="name" data-sortable="true">StarName</th>
+                    <th data-field="name" data-sortable="true">Mentor Name</th>
                     <th data-field="salary" data-sortable="true">Status</th>
                     <th data-field="contact" data-sortable="true">Phone</th>
                     <th data-field="email">Email</th>
-                    <th data-field="mentor name">mentor name</th>
+                    <th data-field="mentor name">Startup Name</th>
                     <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
                   </thead>
                   <tbody>
