--- a/login.html
+++ b/login.html
@@ -165,7 +165,7 @@
                                         <button id="resetPass" class="btn btn-link btn-outline-none">
                                             <a href="/ForgetPasswordForm.html"
                                                 class="text-decoration-underline cursor-pointer">
-                                                Forget Password
+                                                Forget Password?
                                             </a>
                                         </button>
 
@@ -218,41 +218,41 @@
 
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn" data-wow-delay="0.1s">                <div class="container py-5 px-lg-5">
-            <div class="row g-5">
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
-                        KOLKATA
-                        Kolkata - 700048
-                        West Bengal - India</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
-                    <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn"
+            data-wow-delay="0.1s">
+            <div class="container py-5 px-lg-5">
+                <div class="row g-5">
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Get In Touch</h5>
+                        <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
+                            KOLKATA
+                            Kolkata - 700048
+                            West Bengal - India</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
+                        <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
+                        <div class="d-flex pt-2">
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Popular Link</h5>
-                    <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
-                    <a class="btn btn-link" href="team.html">Contact Us</a>
-                <!--
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Popular Link</h5>
+                        <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
+                        <a class="btn btn-link" href="team.html">Contact Us</a>
+                        <!--
 
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 -->
-                    <a class="btn btn-link" href="career.html">Career</a>
-                </div>
+                        <a class="btn btn-link" href="career.html">Career</a>
+                    </div>
 
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visitors</h5>
-                    <!--
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visitors</h5>
+                        <!--
                 <div class="row g-2">
                     <div class="col-4">
                         <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
@@ -274,48 +274,52 @@
                     </div>
                 </div>
             -->
-                    <a href="https://info.flagcounter.com/lzyD"><img
-                            src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
-                            alt="Flag Counter" border="0"></a>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visit Our Office</h5>
-                    <div class="position-relative w-100 mt-3">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        </div>
-                </div>
-            </div>
-        </div>
-        <div class="container px-lg-5">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
-                        Right
-                        Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <br>
-                        <div class="hider" style="color: #454593;">
-                            Designed By <a style="color: #49498a;" class="border-bottom-black"
-                                href="https://htmlcodex.com">HTML Codex</a>
+                        <a href="https://info.flagcounter.com/lzyD"><img
+                                src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
+                                alt="Flag Counter" border="0"></a>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visit Our Office</h5>
+                        <div class="position-relative w-100 mt-3">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="index.html">Home</a>
-                            <!--
+                </div>
+            </div>
+            <div class="container px-lg-5">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
+                            Right
+                            Reserved.
+
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            <br>
+                            <div class="hider" style="color: #454593;">
+                                Designed By <a style="color: #49498a;" class="border-bottom-black"
+                                    href="https://htmlcodex.com">HTML Codex</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-center text-md-end">
+                            <div class="footer-menu">
+                                <a href="index.html">Home</a>
+                                <!--
 
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
                         -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--
+        <!--
 
         <div class="circle">
             <img src="/img/circle.png" alt="">
@@ -325,11 +329,11 @@
         </div>
     -->
     </div>
-<!-- Footer End -->
+    <!-- Footer End -->
 
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
