dynamic row td added

--- a/admin/startup.html
+++ b/admin/startup.html
@@ -117,8 +117,8 @@
                 <th data-field="mentor name">mentor name</th>
                 <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
               </thead>
-              <tbody>
-                <tr>
+              <tbody id="tbody">
+                <!-- <tr>
                   <td>1</td>
                   <td>Dakota Rice</td>
                   <td>Active</td>
@@ -273,7 +273,7 @@
                   <td>Ireland</td>
                   <td>Ronciglione</td>
                   <td></td>
-                </tr>
+                </tr> -->
 
 
               </tbody>
