--- a/admin/startup.html
+++ b/admin/startup.html
@@ -91,9 +91,9 @@
 
 
   <div class="wrapper">
-    <div class="container">
+    <div class="container ">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-11 col-md-offset-2">
           <div class="description">
             <h2>Startup List</h2>
           </div>
@@ -108,7 +108,7 @@
             </div>
 
             <table id="fresh-table" class="table">
-              <thead>
+              <thead class="text-center">
                 <th data-field="id" data-sortable="true">ID</th>
                 <th data-field="name" data-sortable="true">StarName</th>
                 <th data-field="salary" data-sortable="true">Status</th>
