data deleted by Id and remove from dom automatic

--- a/admin/startup.html
+++ b/admin/startup.html
@@ -111,7 +111,7 @@
               <thead class="text-center">
                 <th data-field="id" data-sortable="true">ID</th>
                 <th data-field="name" data-sortable="true">StarName</th>
-                <th data-field="salary" data-sortable="true">Status</th>
+                <!-- <th data-field="salary" data-sortable="true">Status</th> -->
                 <th data-field="contact" data-sortable="true">Phone</th>
                 <th data-field="email">Email</th>
                 <th data-field="mentor name">mentor name</th>
