--- a/admin/index.html
+++ b/admin/index.html
@@ -58,6 +58,11 @@
                         <a href="./mentor.html">Mentor List</a>
                     </li>
 
+                    <li>
+                        <i class="fa fa-user-plus coral" aria-hidden="true"></i>
+                        <a href="../Registration.html">Register</a>
+                    </li>
+
                 </ul>
             </div>
             <!-- service part end here -->
