--- a/Registration.html
+++ b/Registration.html
@@ -159,11 +159,24 @@
                             <h2 class="mt-2">Get Disruptive Acceleration With Q Startups</h2>
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
+
+                            <form class="form-inline d-flex p-2 d-flex justify-content-center">
+                                <div class="form-group mx-sm-3 mb-2">
+                                  <label for="inputUser2" class="sr-only">User Name:</label>
+                                  <input type="text"  pattern="[a-zA-Z]+[0-9]+"
+                                  title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
+                                   class="form-control" id="inputUser2" placeholder="@example123">
+                                </div>
+                                <div class="centerr">
+                                    <button type="submit" class="btn btn-primary mb-2 ">Search</button>
+                                </div>
+                              </form>
+
                             <form id="ft-form" class="form" accept-charset="UTF-8" enctype="multipart/form-data">
 
 
-                                <fieldset>
-                                    <h3>Register Yourself as :- </h3>
+                                <fieldset class="d-flex justify-content-around">
+                                    <!-- <h3>Register Yourself as :- </h3> -->
                                     <div class="two-cols">
 
                                         <label><input type="radio" name="colorRadio" value="red">
