add edit detail file

--- a/admin/index.html
+++ b/admin/index.html
@@ -59,8 +59,8 @@
                     </li>
 
                     <li>
-                        <i class="fa fa-user-plus coral" aria-hidden="true"></i>
-                        <a href="../Registration.html">Register</a>
+                        <i class="fa fa-info-circle coral" aria-hidden="true"></i>
+                        <a href="./editdetails.html">Details</a>
                     </li>
 
                 </ul>
