Minor changes to img & links

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated zoomIn">Q Startup to grow your startup rapidly</h1>
+                            <h1 class="text-white mb-4 animated zoomIn">Q Startup to grow your startup <u>rapidly</u> </h1>
                             <p class="text-white pb-3 animated zoomIn">We are Startup Accelerator and is in the business of OFFERING ACCELERATION SERVICES to the Startups in their Early Stage and Growth Stage.</p>
                             <a href="./signUp.html" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">SignUp</a>
-                            <a href=""
+                            <a href="./contact.html"
                                 class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact
                                 Us</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
-                            <img class="img-fluid" style="height:  368px; width: 501px;" src="img/newsletter.png"
+                            <img class="img-fluid" style="height:  368px; width: 501px;" src="img/pngegg.png"
                                 alt="">
                             <img src="/img/light-bulb.webp" alt="" class="light-class">
                         </div>
