--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -1063,7 +1063,7 @@
                             <div class="form-group">
                                 <label class="form-control-label" for="input-Message_sendAmessage_form">Message</label>
                                 <input type="textarea" id="input-Message_sendAmessage_form" class="form-control"
-                                    placeholder="unique ID">
+                                    placeholder="Message">
                             </div>
                         </div>
                     </div>
