--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
 
                                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                                 <br>
-                                <div class="hider" style="color: #454593;">
-                                    Designed By <a style="color: #49498a;" class="border-bottom-black"
+                                <div class="hider" style="color: #a3c0d4;">
+                                    Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
                                         href="https://htmlcodex.com">HTML Codex</a>
                                 </div>
                             </div>
