--- a/admin/startup.html
+++ b/admin/startup.html
@@ -16,6 +16,8 @@
   <!---------- CHECK ASSETS ONCE IT has JS files MAY include Backend ALSO --------------->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="table/assets/css/fresh-bootstrap-table.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.css">
+
   <link href="table/assets/css/demo.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -23,6 +25,14 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
+
+
+
+
+
+  <!-- ____________________ -->
+
+
 
 </head>
 
@@ -99,182 +109,19 @@
           </div>
 
           <div class="fresh-table full-color-azure">
-            <!--
-          Available colors for the full background: full-color-blue, full-color-azure, full-color-green, full-color-red, full-color-orange
-          Available colors only for the toolbar: toolbar-color-blue, toolbar-color-azure, toolbar-color-green, toolbar-color-red, toolbar-color-orange
-        -->
-            <div class="toolbar">
-              <button id="alertBtn" class="btn btn-default">Alert</button>
-            </div>
+            <table id="fresh-table" class="table" data-search="true" data-sortable="true">
 
-            <table id="fresh-table" class="table">
-              <thead class="text-center">
+              <thead class="text-center ">
                 <th data-field="id" data-sortable="true">ID</th>
                 <th data-field="name" data-sortable="true">StartUpName</th>
-                <!-- <th data-field="salary" data-sortable="true">Status</th> -->
+                <th data-field="sturtupPhone" data-sortable="true">phone</th>
                 <th data-field="contact" data-sortable="true">Phone</th>
                 <th data-field="email">Email</th>
                 <th data-field="mentor name">User Name</th>
                 <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
               </thead>
-              <tbody id="tbody">
-                <!-- <tr>
-                  <td>1</td>
-                  <td>Dakota Rice</td>
-                  <td>Active</td>
-                  <td>98765321</td>
-                  <td>cake@gmail.com</td>
-                  <td>Oud-Turnhout</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Minerva Hooper</td>
-                  <td>Deactive</td>
-                  <td>Curaçao</td>
-                  <td>Sinaai-Waas</td>
-                  <td>Sinaai-Waas</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Sage Rodriguez</td>
-                  <td>Active</td>
-                  <td>Netherlands</td>
-                  <td>Baileux</td>
-                  <td>Baileux</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Philip Chaney</td>
-                  <td>$38,735</td>
-                  <td>Korea, South</td>
-                  <td>Overland Park</td>
-                  <td>Overland Park</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Doris Greene</td>
-                  <td>$63,542</td>
-                  <td>Malawi</td>
-                  <td>Feldkirchen in Kärnten</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>Mason Porter</td>
-                  <td>$78,615</td>
-                  <td>Chile</td>
-                  <td>Gloucester</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>7</td>
-                  <td>Alden Chen</td>
-                  <td>$63,929</td>
-                  <td>Finland</td>
-                  <td>Gary</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>8</td>
-                  <td>Colton Hodges</td>
-                  <td>$93,961</td>
-                  <td>Nicaragua</td>
-                  <td>Delft</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>9</td>
-                  <td>Illana Nelson</td>
-                  <td>$56,142</td>
-                  <td>Heard Island</td>
-                  <td>Montone</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>10</td>
-                  <td>Nicole Lane</td>
-                  <td>$93,148</td>
-                  <td>Cayman Islands</td>
-                  <td>Cottbus</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>11</td>
-                  <td>Chaim Saunders</td>
-                  <td>$5,502</td>
-                  <td>Romania</td>
-                  <td>New Quay</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>12</td>
-                  <td>Josiah Simon</td>
-                  <td>$50,265</td>
-                  <td>Christmas Island</td>
-                  <td>Sint-Jans-Molenbeek</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>13</td>
-                  <td>Ila Poole</td>
-                  <td>$67,413</td>
-                  <td>Montenegro</td>
-                  <td>Pontevedra</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>14</td>
-                  <td>Shana Mejia</td>
-                  <td>$58,566</td>
-                  <td>Afghanistan</td>
-                  <td>Ballarat</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>15</td>
-                  <td>Lana Ryan</td>
-                  <td>$64,151</td>
-                  <td>Martinique</td>
-                  <td>Portobuffolè</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>16</td>
-                  <td>Daquan Bender</td>
-                  <td>$91,906</td>
-                  <td>Sao Tome and Principe</td>
-                  <td>Walhain-Saint-Paul</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>17</td>
-                  <td>Connor Wagner</td>
-                  <td>$86,537</td>
-                  <td>Germany</td>
-                  <td>Solihull</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>18</td>
-                  <td>Boris Horton</td>
-                  <td>$35,094</td>
-                  <td>Laos</td>
-                  <td>Saint-Mard</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>19</td>
-                  <td>Winifred Ryan</td>
-                  <td>$64,436</td>
-                  <td>Ireland</td>
-                  <td>Ronciglione</td>
-                  <td></td>
-                </tr> -->
 
+              <tbody id="tbody">
 
               </tbody>
             </table>
@@ -285,128 +132,97 @@
   </div>
 
 
-  <!-- <script type="text/javascript">
-    var $table = $('#fresh-table')
-    var $alertBtn = $('#alertBtn')
-
-    window.operateEvents = {
-      'click .like': function (e, value, row, index) {
-        alert('You click like icon, row: ' + JSON.stringify(row))
-        console.log(value, row, index)
-      },
-      'click .edit': function (e, value, row, index) {
-        alert('You click edit icon, row: ' + JSON.stringify(row))
-        console.log(value, row, index)
-      },
-      'click .remove': function (e, value, row, index) {
-        $table.bootstrapTable('remove', {
-          field: 'id',
-          values: [row.id]
-        })
-      }
-    }
-
-    function operateFormatter(value, row, index) {
-      return [
-        '<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">',
-        '<i class="fa fa-heart"></i>',
-        '</a>',
-        '<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">',
-        '<i class="fa fa-edit"></i>',
-        '</a>',
-        '<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">',
-        '<i class="fa fa-remove"></i>',
-        '</a>'
-      ].join('')
-    }
-
-    $(function () {
-      $table.bootstrapTable({
-        classes: 'table table-hover table-striped',
-        toolbar: '.toolbar',
-
-        search: true,
-        showRefresh: true,
-        showToggle: true,
-        showColumns: true,
-        pagination: true,
-        striped: true,
-        sortable: true,
-        pageSize: 8,
-        pageList: [8, 10, 25, 50, 100],
-
-        formatShowingRows: function (pageFrom, pageTo, totalRows) {
-          return ''
-        },
-        formatRecordsPerPage: function (pageNumber) {
-          return pageNumber + ' rows visible'
-        }
-      })
-
-      $alertBtn.click(function () {
-        alert('You pressed on Alert')
-      })
-    })
-
-    $('#sharrreTitle').sharrre({
-      share: {
-        twitter: true,
-        facebook: true
-      },
-      template: '',
-      enableHover: false,
-      enableTracking: true,
-      render: function (api, options) {
-        $("#sharrreTitle").html('Thank you for ' + options.total + ' shares!')
-      },
-      enableTracking: true,
-      url: location.href
-    })
-
-    $('#twitter').sharrre({
-      share: {
-        twitter: true
-      },
-      enableHover: false,
-      enableTracking: true,
-      buttons: { twitter: { via: 'CreativeTim' } },
-      click: function (api, options) {
-        api.simulateClick()
-        api.openPopup('twitter')
-      },
-      template: '<i class="fa fa-twitter"></i> {total}',
-      url: location.href
-    })
-
-    $('#facebook').sharrre({
-      share: {
-        facebook: true
-      },
-      enableHover: false,
-      enableTracking: true,
-      click: function (api, options) {
-        api.simulateClick()
-        api.openPopup('facebook')
-      },
-      template: '<i class="fa fa-facebook-square"></i> {total}',
-      url: location.href
-    })
-  </script> -->
 
   <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga')
+    // Fetch data from backend
+    fetch('http://localhost:5000/admin/getAllStartUp?role=startUp')
+      .then(response => response.json())
+      .then(data => {
+        // Get table body element
+        console.log(data)
+        const tbody = document.querySelector('#tbody');
 
-    ga('create', 'UA-46172202-1', 'auto')
-    ga('send', 'pageview')
+        // Loop through data and create table rows
+        data.forEach(item => {
+          // Create new row element
+          const row = document.createElement('tr');
 
+          // Create and append cells to the row
+          const idCell = document.createElement('td');
+          idCell.textContent = item._id;
+          row.appendChild(idCell);
+
+          const nameCell = document.createElement('td');
+          nameCell.textContent = item.title;
+          row.appendChild(nameCell);
+
+          const phoneCell = document.createElement('td');
+          phoneCell.textContent = item.phone;
+          row.appendChild(phoneCell);
+
+          const contactCell = document.createElement('td');
+          contactCell.textContent = item.contact;
+          row.appendChild(contactCell);
+
+          const emailCell = document.createElement('td');
+          emailCell.textContent = item.email;
+          row.appendChild(emailCell);
+
+          const mentorCell = document.createElement('td');
+          mentorCell.textContent = item.mentor_name;
+          row.appendChild(mentorCell);
+
+          const actionsCell = document.createElement('td');
+          actionsCell.textContent = 'Actions';
+          row.appendChild(actionsCell);
+
+          // Append the new row to the table body
+          tbody.appendChild(row);
+        });
+
+        // Initialize the DataTable
+        $('#fresh-table').bootstrapTable('destroy').bootstrapTable({
+          classes: 'table table-hover table-striped',
+          toolbar: '.toolbar',
+          search: true,
+          showRefresh: true,
+          showToggle: true,
+          showColumns: true,
+          pagination: true,
+          striped: true,
+          sortable: true,
+          pageSize: 8,
+          pageList: [8, 10, 25, 50, 100],
+
+
+
+          // -----------
+          // other options...
+          pagination: true,
+          pageNumber: 1,
+          pageSize: 10,
+          pageList: [10, 25, 50, 100],
+          paginationPreText: 'Previous',
+          paginationNextText: 'Next',
+          paginationHAlign: 'right',
+          paginationDetailHAlign: 'left',
+          paginationShowPageGo: true,
+          paginationTrimType: 'middle',
+          showPaginationSwitch: true,
+          // --------
+
+
+          formatShowingRows: function (pageFrom, pageTo, totalRows) {
+            return ''
+          },
+          formatRecordsPerPage: function (pageNumber) {
+            return pageNumber + ' rows visible'
+          }
+        });
+      })
+      .catch(error => console.error(error));
   </script>
 
-  <script src="../js/Admin.js/startupHandle.js"></script>
 </body>
 
 </html>
