--- a/login.html
+++ b/login.html
@@ -288,6 +288,7 @@
                         </div>
                     </div>
                 </div>
+                </div>
         <div class="container px-lg-5">
             <div class="copyright">
                 <div class="row">
