both Navbar Adjusted, Navlinks

--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -70,6 +70,11 @@
                         <a href="./mentor.html">Mentor List</a>
                     </li>
 
+                    <li>
+                      <i class="fa fa-info-circle coral" aria-hidden="true"></i>
+                      <a href="./editdetails.html">Details</a>
+                  </li>
+
                 </ul>
             </div>
             <!-- service part end here -->
