--- a/admin/startup.html
+++ b/admin/startup.html
@@ -80,6 +80,10 @@
             <i class="fa-solid fa-user-group blue"></i>
             <a href="./mentor.html">Mentor List</a>
           </li>
+          <li>
+            <i class="fa fa-info-circle coral" aria-hidden="true"></i>
+            <a href="./editdetails.html">Details</a>
+        </li>
 
         </ul>
       </div>
