--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <!-- Service End -->
 
 
-        <!-- Testimonial Start -->
+        <!-- Testimonial Start
         <div class="container-xxl bg-primary testimonial py-5 my-5 wow fadeInUp circle-animation" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="owl-carousel testimonial-carousel">
@@ -371,7 +371,7 @@
                 <img src="/img/triangle-pic-removebg-preview.png" alt="">
             </div>
         </div>
-        <!-- Testimonial End -->
+         Testimonial End -->
 
         <!-- Portfolio Start -->
         <div class="container-xxl py-5">
