--- a/admin/editdetails.html
+++ b/admin/editdetails.html
@@ -36,12 +36,23 @@
          .box {
              display: none;
          }
+         .metorORstartup_btn{
+            border: 1px solid black;
+            border-radius: 20px;
+            margin: 1rem 1rem 1rem 1rem;
+            padding: 0.5rem 2rem 0.5rem 2rem;
+         }
+         .metorORstartup_btn:hover{
+            background-color: black;
+            color: white;
+            transition: 0.3s;
+         }
      </style>
     
      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
      <script>
          $(document).ready(function () {
-             $('input[type="radio"]').click(function () {
+             $('input[type="reset"]').click(function () {
                  event.preventDefault();
                  var inputValue = $(this).attr("value");
                  var targetBox = $("." + inputValue);
@@ -140,37 +151,24 @@
                         <h6 class="position-relative d-inline text-primary ps-4">Edit Detail</h6>
                         <h2 class="mt-2">Edit Information</h2>
                     </div>
+                    <div class="two-cols justify-content-center d-flex">
+                        <input class="metorORstartup_btn" type="reset" name="colorRadio" value="Mentor">
+                        <input class="metorORstartup_btn" type="reset" name="colorRadio" value="Startup">
+                    </div>
                     <div class="wow fadeInUp" data-wow-delay="0.3s">
-
                         <form class="form-inline d-flex p-2 d-flex justify-content-center">
                             <div class="form-group mx-sm-3 mb-2">
                               <label for="inputUser2" class="sr-only">User Name:</label>
                               <input type="text"  pattern="[a-zA-Z]+[0-9]+"
                               title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
-                               class="form-control" id="inputUser2" placeholder="@example123" id="backend">
+                               class="form-control" id="inputUser2" placeholder="Enter Unique ID" id="backend">
                             </div>
                             <div class="centerr">
                                 <button type="submit" class="btn btn-primary mb-2" id="backend-data">Search</button>
                             </div>
-                          </form>
-
+                        </form>
                         <form id="ft-form" class="form" accept-charset="UTF-8" enctype="multipart/form-data">
-
-
-                            <fieldset class="d-flex justify-content-around">
-                                <!-- <h3>Register Yourself as :- </h3> -->
-                                <div class="two-cols">
-
-                                    <label><input type="radio" name="colorRadio" value="red">
-                                        <h5>Mentor</h5>
-                                    </label>
-                                    <label><input type="radio" name="colorRadio" value="green">
-                                        <h5>Startup</h5>
-                                    </label>
-                                </div>
-                            </fieldset>
-
-                            <div class="red box">
+                            <div class="Mentor box">
                                 <fieldset>
                                     <label>
                                         Mentor Name *
@@ -297,7 +295,7 @@
                         <!--__________________________  sturtup form start______________________________________ -->
 
                         <form id="ft-form" class="startupForm">
-                            <div class="green box">
+                            <div class="Startup box">
 
                                 <fieldset>
                                     <label>
