--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -147,19 +147,20 @@
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
 
-                            <form class="form-inline d-flex p-2 d-flex justify-content-center">
+                            <form id="searchForm" class="form-inline d-flex p-2 d-flex justify-content-center">
                                 <div class="form-group mx-sm-3 mb-2">
-                                    <label for="inputUser2" class="sr-only">User Name:</label>
-                                    <input type="text" pattern="[a-zA-Z]+[0-9]+"
+                                    <label for="searchField" class="sr-only">User Name:</label>
+                                    <input type="email" pattern="[a-zA-Z]+[0-9]+" id="searchField"
                                         title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                        class="form-control" id="inputUser2" placeholder="@example123" id="backend">
+                                        class="form-control" placeholder=" searchBy@email">
                                 </div>
                                 <div class="centerr">
                                     <button type="submit" class="btn btn-primary mb-2" id="backend-data">Search</button>
                                 </div>
                             </form>
 
-                            <form id="ft-form" class="Mentorform" accept-charset="UTF-8" enctype="multipart/form-data">
+                            <form id="ft-form" style="display: none;" class="Mentorform" accept-charset="UTF-8"
+                                enctype="multipart/form-data">
 
 
                                 <fieldset class="d-flex justify-content-around">
@@ -180,12 +181,12 @@
                                     <fieldset>
                                         <label>
                                             Mentor Name *
-                                            <input type="text" name="username" required id="username" readonly>
+                                            <input type="text" name="username" required id="username">
                                         </label>
                                         <div class="two-cols">
                                             <label>
-                                                Email address * [can't change]
-                                                <input type="email" name="email" id="mentorEmail" required readonly>
+                                                Email address *
+                                                <input type="email" name="email" id="mentorEmail" required>
                                             </label>
                                             <label>
                                                 Phone *
@@ -302,7 +303,7 @@
 
                             <!--__________________________  sturtup form start______________________________________ -->
 
-                            <form id="ft-form" class="startupForm">
+                            <form id="ft-form" style="display: none;" class="startupForm">
                                 <div class="">
                                     <!-- green box -->
 
@@ -314,7 +315,7 @@
 
                                         <div class="two-cols">
                                             <label>
-                                                StartUp Email address * [can't change]
+                                                StartUp Email
                                                 <input type="email" name="email" id="startupUserEmail" required>
                                             </label>
 
